--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-	"token": "ODc2ODg1NDU3NjE3NzExMTM1.YRqlOA.lzYJVyjK6pvbetV76ZLbbIBfEbE",
+	"token": "[redacted]",
 	"prefix": "*",
 	"host": "Unity Server"
 }
