--- a/botconfig.json
+++ b/botconfig.json
@@ -1,5 +1,5 @@
 {
-	"token": "ODc3NTI0ODA5NDk4NjQ0NDkx.YRz4qg.IMwS_jvftA4i6q1f9dU8GZFb_zM",
+	"token": "[redacted]",
 	"prefix": "*",
 	"host": "Unity Server"
 }
