--- a/.gitignore
+++ b/.gitignore
@@ -1189,3 +1189,13 @@ node_modules/ws/package.json
 node_modules/ws/README.md
 node_modules.zip
 node_modules.zip
+node_modules/parse-ms/index.d.ts
+node_modules/parse-ms/index.js
+node_modules/parse-ms/license
+node_modules/parse-ms/package.json
+node_modules/parse-ms/readme.md
+node_modules/pretty-ms/index.d.ts
+node_modules/pretty-ms/index.js
+node_modules/pretty-ms/license
+node_modules/pretty-ms/package.json
+node_modules/pretty-ms/readme.md
